--- a/index.html
+++ b/index.html
@@ -6,7 +6,37 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <!-- <div>hello</div> -->
+    <div class="inputs">
+        <div class="container">
+            <div>0.00</div>
+            <button class="back">back</button>
+        </div>
+        <div class="container">
+            <button class="input">7</button>
+            <button class="input">8</button>
+            <button class="input">9</button>
+            <button class="input">/</button>
+        </div>
+        <div class="container">
+            <button class="input">4</button>
+            <button class="input">5</button>
+            <button class="input">6</button>
+            <button class="input">*</button>
+        </div>
+        <div class="container">
+            <button class="input">1</button>
+            <button class="input">2</button>
+            <button class="input">3</button>
+            <button class="input">-</button>
+        </div>
+        <div class="container">
+            <button class="input">0</button>
+            <button class="input">.</button>
+            <button class="input">=</button>
+            <button class="input">+</button>
+        </div>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
