--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <!-- <div>hello</div> -->
     <div class="inputs">
         <div class="container">
-            <div>0.00</div>
+            <div class="display">0.00</div>
             <button class="back">back</button>
         </div>
         <div class="container">
@@ -33,7 +32,7 @@
         <div class="container">
             <button class="input">0</button>
             <button class="input">.</button>
-            <button class="input">=</button>
+            <button class="equals">=</button>
             <button class="input">+</button>
         </div>
     </div>
