add operate function

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="inputs">
         <div class="container">
             <div class="display">0.00</div>
-            <button class="back">back</button>
+            <button class="clear">C</button>
         </div>
         <div class="container">
             <button class="input">7</button>
