--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="inputs">
         <div class="container">
-            <div class="display">0.00</div>
+            <div class="display"></div>
             <button class="clear">C</button>
         </div>
         <div class="container">
